--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                         </li>
                         <li class="nav-item">
                             <a href="mailto:ilias.gaillot@igadvisory.fr" class="btn btn-sm btn-primary btn-icon ml-3" target="_blank">
-                                <span class="btn-inner--icon"><i data-feather="shopping-bag"></i></span>
+                                <span class="btn-inner--icon"><i data-feather="mail"></i></span>
                                 <span class="btn-inner--text">Contact</span>
                             </a>
                         </li>
