--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
                         <!-- Social -->
                         <ul class="nav mt-4">
                             <li class="nav-item">
-                                <a class="nav-link pl-0" href="https://www.linkedin.com/in/ilias-gaillot-b9281b18/" target="_blank">
+                                <a class="nav-link pl-0" href="https://www.linkedin.com/company/i-g-advisory/about/" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
                             </li>
@@ -1030,7 +1030,7 @@
                     <div class="col-md-6">
                         <ul class="nav justify-content-center justify-content-md-end mt-3 mt-md-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="mentions-legales.html">
                                     Informations légales
                                 </a>
                             </li>
