--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -79,9 +79,16 @@
     <p>Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.</p>
 
     <br>
-    <br>
+   
+    <!-- boutton retour page  -->
+    <a href="index.html" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true"> 
+      <!-- icon back -->
+      <i class="fas fa-arrow-left"> </i>
+      Retour</a>
     
     <br>
+    <br>
+
 
 
 </body>
@@ -94,5 +101,15 @@
         max-width: 800px;
         margin-top: 20px;
         
+    }
+
+    /* mobile */
+    @media screen and (max-width: 800px) {
+        body > * {
+            /* center and width */
+            margin: 0 auto;
+            max-width: 80%;
+            margin-top: 20px;
+        }
     }
 </style>
