--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
             </div>
             <!-- Card -->
             <div class="row mt-5">
-                <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-md-4 hover-translate-y-n10 hover-shadow-lg" data-aos="fade-right" data-aos-duration="1000">
                     <div class="card border-0 " style="background-color: rgb(39, 39, 108);">
                         <div class="card-body pb-5">
                             <div class="pt-4 pb-5">
@@ -868,7 +868,7 @@
                 </div>
 
 
-                <div class="col-md-4" data-aos="fade-down" data-aos-duration="1000">
+                <div class="col-md-4 hover-translate-y-n10 hover-shadow-lg" data-aos="fade-down" data-aos-duration="1000">
                     <div class="card border-0 bg-soft-primary">
                         <div class="card-body pb-5">
                             <div class="pt-4 pb-5">
@@ -883,7 +883,7 @@
                     </div>
                 </div>
                                 
-                <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000">
+                <div class="col-md-4 hover-translate-y-n10 hover-shadow-lg" data-aos="fade-left" data-aos-duration="1000">
                     <div class="card border-0"style="background-color: #A4A0ED;">
                         <div class="card-body pb-5">
                             <div class="pt-4 pb-5">
