--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                     <span class="badge badge-primary badge-pill">
                         Société d'expertise comptable et de conseil
                     </span>
-                    <h3 class="mt-5">Nous accompagnons les sociétés de tous types et secteurs <br > <span class="text-primary typed" id="type-entreprises" data-type-this="PME, Startup, Web3, Immobilier"></span> 
+                    <h3 class="mt-5">Nous accompagnons les sociétés de tous types et secteurs <br > <span class="text-primary typed" id="type-entreprises" data-type-this="TPE, PME, Web3, Startups, Immobilier"></span> 
                         <br>
                         
                     </h3>
@@ -853,11 +853,11 @@
             </div>
             <!-- Card -->
             <div class="row mt-5">
-                <div class="col-md-4 hover-translate-y-n10 hover-shadow-lg" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="card border-0 " style="background-color: rgb(39, 39, 108);">
+                <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="card border-0  hover-translate-y-n10 hover-shadow-lg" style="background-color: rgb(39, 39, 108);">
                         <div class="card-body pb-5">
                             <div class="pt-4 pb-5">
-                                <img src="assets/img/svg/illustrations/illustration-7.svg" class="img-fluid img-center" style="height: 200px;" alt="Illustration" />
+                                <img src="assets/img/svg/illustrations/illustration-5.svg" class="img-fluid img-center" style="height: 200px;" alt="Illustration" />
                             </div>
                             <h5 class="h4 lh-130 text-white mb-3">TPE & PME</h5>
                             <p class="text-white mb-0">
@@ -868,11 +868,11 @@
                 </div>
 
 
-                <div class="col-md-4 hover-translate-y-n10 hover-shadow-lg" data-aos="fade-down" data-aos-duration="1000">
-                    <div class="card border-0 bg-soft-primary">
+                <div class="col-md-4" data-aos="fade-down" data-aos-duration="1000">
+                    <div class="card border-0 bg-soft-primary  hover-translate-y-n10 hover-shadow-lg">
                         <div class="card-body pb-5">
                             <div class="pt-4 pb-5">
-                                <img src="assets/img/svg/illustrations/illustration-5.svg" class="img-fluid img-center" style="height: 200px;" alt="Illustration" />
+                                <img src="assets/img/svg/illustrations/illustration-7.svg" class="img-fluid img-center" style="height: 200px;" alt="Illustration" />
                             </div>
                             <h5 class="h4 lh-130 text-dark mb-3">Web3 & Startups</h5>
                             <p class="text-dark opacity-6 mb-0">
@@ -883,11 +883,11 @@
                     </div>
                 </div>
                                 
-                <div class="col-md-4 hover-translate-y-n10 hover-shadow-lg" data-aos="fade-left" data-aos-duration="1000">
-                    <div class="card border-0"style="background-color: #A4A0ED;">
+                <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="card border-0  hover-translate-y-n10 hover-shadow-lg"style="background-color: #A4A0ED;">
                         <div class="card-body pb-5">
                             <div class="pt-4 pb-5">
-                                <img src="assets/img/svg/illustrations/illustration-6.svg" class="img-fluid img-center" style="height: 200px;" alt="Illustration" />
+                                <img src="assets/img/perso/immo.svg" class="img-fluid img-center" style="height: 200px;" alt="Illustration" />
                             </div>
                             <h5 class="h4 lh-130 text-dark mb-3">Sociétés immobilières</h5>
                             <p class="text-dark opacity-6 mb-0">
