--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                     <span class="badge badge-primary badge-pill">
                         Société d'expertise comptable et de conseil
                     </span>
-                    <h3 class="mt-5">Nous accompagnons les sociétés de tous types et secteurs <br > <span class="text-primary typed" id="type-entreprises" data-type-this="TPE, PME, Web3, Startups, Immobilier"></span> 
+                    <h3 class="mt-5">Nous accompagnons les sociétés de tous types et secteurs <br > <span class="text-primary typed" id="type-entreprises" data-type-this="TPE, PME, Web3, Startups, Web3, Immobilier"></span> 
                         <br>
                         
                     </h3>
@@ -978,12 +978,13 @@
                             Société d'expertise comptable et de conseil <br>74 rue Albert, 75013 Paris
                         </p>
                         <!-- Social -->
-                        <ul class="nav mt-4">
-                            <li class="nav-item">
+                        <ul class="nav mt-4" >
+                            <li class="nav-item" >
                                 <a class="nav-link pl-0" href="https://www.linkedin.com/company/i-g-advisory/about/" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
                             </li>
+                            
                         </ul>
                     </div>
                     <!--
@@ -1015,6 +1016,9 @@
                     </div>
                 -->
                 </div>
+                <center>
+                    <img src="assets/img/perso/LOGO_OEC_BLANC-initiative.png" alt="" style="width: 4cm; height: 1cm;">
+                </center>
                 <hr class="divider divider-fade divider-dark my-4">
                 <div class="row align-items-center justify-content-md-between pb-4">
                     <div class="col-md-6">
