new footer logo

--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <!-- Theme's logo -->
                         <a href="index.html">
-                            <img alt="Image placeholder" src="assets/img/perso/logo.png" id="footer-logo" style="width: 3.2cm; height: 1.5cm;">
+                            <img alt="Image placeholder" src="assets\img\perso\ig_logo_footer.png" id="footer-logo" style="width: 3.2cm; height: 1.5cm;">
                         </a>
                         <!-- Webpixels' mission -->
                         <p class="mt-4 text-sm opacity-8 pr-lg-4">
